{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 37,
  "lineage": "bac3fc4e-dfb7-0350-c751-f967dfc4a741",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-afd27753",
            "domain": "vpc",
            "id": "eipalloc-013e63b51504cc000",
            "network_interface": "eni-0e2f14eb48d17e926",
            "private_dns": "ip-10-0-0-93.eu-central-1.compute.internal",
            "private_ip": "10.0.0.93",
            "public_dns": "ec2-3-121-242-56.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.242.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateEC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062c497b55437b01",
            "arn": "arn:aws:ec2:eu-central-1:332664274229:instance/i-09714cd5f09412296",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09714cd5f09412296",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4b6f870bbb901ef",
            "private_dns": "ip-10-0-20-36.eu-central-1.compute.internal",
            "private_ip": "10.0.20.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ce8479ab07201acc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0333b4f51795f3911",
            "tags": {
              "Name": "PrivateEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0814e58b56924eca8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.PrivateSubnet_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicEC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0062c497b55437b01",
            "arn": "arn:aws:ec2:eu-central-1:332664274229:instance/i-0db9aee3c0ad314cb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0db9aee3c0ad314cb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "1",
            "monitoring": false,
            "primary_network_interface_id": "eni-08fb3d0a306d8f06c",
            "private_dns": "ip-10-0-0-251.eu-central-1.compute.internal",
            "private_ip": "10.0.0.251",
            "public_dns": "ec2-18-197-104-245.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.104.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c1761b32bac98e8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0540218e7ceb8fa56",
            "tags": {
              "Name": "PublicEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0814e58b56924eca8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.PublicSubnet_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_TF",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00ece846e7433082b",
            "owner_id": "332664274229",
            "tags": {
              "Name": "IGW_TF"
            },
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013e63b51504cc000",
            "id": "nat-04bb6c4c2b4ba501d",
            "network_interface_id": "eni-0e2f14eb48d17e926",
            "private_ip": "10.0.0.93",
            "public_ip": "3.121.242.56",
            "subnet_id": "subnet-0540218e7ceb8fa56",
            "tags": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.PublicSubnet_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00b8b817e08db4996",
            "owner_id": "332664274229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04bb6c4c2b4ba501d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a8d4e13557de13bd",
            "owner_id": "332664274229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ece846e7433082b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_TF",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateroutetableassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845cad3cb9da2c7e",
            "route_table_id": "rtb-00b8b817e08db4996",
            "subnet_id": "subnet-0333b4f51795f3911"
          },
          "dependencies": [
            "aws_nat_gateway.NATGW",
            "aws_route_table.PrivateRouteTable",
            "aws_subnet.PrivateSubnet_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicroutetableassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0235fdba1af976777",
            "route_table_id": "rtb-0a8d4e13557de13bd",
            "subnet_id": "subnet-0540218e7ceb8fa56"
          },
          "dependencies": [
            "aws_route_table.PublicRouteTable",
            "aws_subnet.PublicSubnet_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:332664274229:security-group/sg-0814e58b56924eca8",
            "description": "Allow SSH inbound traffic/ Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0814e58b56924eca8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "332664274229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroup_TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:332664274229:subnet/subnet-0333b4f51795f3911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0333b4f51795f3911",
            "map_public_ip_on_launch": false,
            "owner_id": "332664274229",
            "tags": {
              "Name": "PrivateSubnet_A"
            },
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:332664274229:subnet/subnet-0540218e7ceb8fa56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0540218e7ceb8fa56",
            "map_public_ip_on_launch": true,
            "owner_id": "332664274229",
            "tags": {
              "Name": "PublicSubnet_A"
            },
            "vpc_id": "vpc-05f4896c453f96799"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:332664274229:vpc/vpc-05f4896c453f96799",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0671702f707794116",
            "default_route_table_id": "rtb-0f74499f564215109",
            "default_security_group_id": "sg-0ed726f42381f765f",
            "dhcp_options_id": "dopt-79cef112",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05f4896c453f96799",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f74499f564215109",
            "owner_id": "332664274229",
            "tags": {
              "Name": "VPC_TF"
            }
          }
        }
      ]
    }
  ]
}